GigaBasic/src/Basic.java
/* Generated By:JavaCC: Do not edit this line. Basic.java */
public class Basic implements BasicConstants {
  public static SymbolTable symTable = new SymbolTable();

  public static SymbolTable.Entry findSym(String name) {
    SymbolTable.Entry entry;
    entry = symTable.get(name);
    return entry;
  }

  public static void main(String args []) throws ParseException
  {
    Basic parser = new Basic(System.in);
    while (true)
    {
      System.out.println("Reading from standard input...");
      System.out.println("{  abcv = (2+a)-(b+3) * (c-2); }");
      System.out.println("Enter a program block");
      try
      {
        Stmt program;
        program = parser.giga_basic();
        System.out.println("*Program: ");
        program.traverse(1);

        // Now call the next phase of the compiler
        // Like the global optimizer
        // Then the code generator
        CodeGenerator.walk(program);
      }
      catch (Exception e)
      {
        System.out.println("NOK.");
        System.out.println(e.getMessage());
        Basic.ReInit(System.in);
      }
      catch (Error e)
      {
        System.out.println("Oops.");
        System.out.println(e.getMessage());
        break;
      }
    }
  }

  static final public Stmt giga_basic() throws ParseException {
  Stmt block_link;
  for(String name:symTable.keySet()) {
    SymbolTable.Entry entry = symTable.get(name);
    System.out.println(name+entry);
  }
    block_link = block();
          {if (true) return block_link;}
    throw new Error("Missing return statement in function");
  }

  static final public Stmt block() throws ParseException {
  Stmt block_node = new Stmt();
  Stmt tail = null;
  Stmt statement_link;
  block_node.type ="block";
    jj_consume_token(LBRACE);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
      case PRINT:
      case IF:
      case INT:
      case REAL:
      case IDENT:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      statement_link = stmt();
      jj_consume_token(20);
                                  if (statement_link!=null) {
                                  if (block_node.child==null)
                                                block_node.child = statement_link;
                                        else
                                                tail.next = statement_link;
                                        tail = statement_link;
                                }
    }
    jj_consume_token(RBRACE);
   {if (true) return block_node;}
    throw new Error("Missing return statement in function");
  }

  static final public void variable() throws ParseException {
  Token dataType, variableName;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      dataType = jj_consume_token(INT);
      break;
    case REAL:
      dataType = jj_consume_token(REAL);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    variableName = jj_consume_token(IDENT);
                symTable.add(variableName.image, dataType.image);
  }

  static final public Stmt stmt() throws ParseException {
        Stmt statement=null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      statement = block();
      break;
    case IDENT:
      statement = assignment();
      break;
    case PRINT:
      statement = print_statement();
      break;
    case IF:
      statement = if_statement();
      break;
    case INT:
    case REAL:
      variable();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return statement;}
    throw new Error("Missing return statement in function");
  }

  static final public Stmt if_statement() throws ParseException {
  Stmt statement = new Stmt();
  statement.type="if";
  ExpNode exp;
    jj_consume_token(IF);
    jj_consume_token(21);
    exp = expression();
    jj_consume_token(22);
          statement.expression = exp;
          {if (true) return statement;}
    throw new Error("Missing return statement in function");
  }

  static final public Stmt print_statement() throws ParseException {
  Stmt print = new Stmt();
  print.type="print";
  ExpNode exp=null;
    jj_consume_token(PRINT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONSTANT:
    case IDENT:
    case 21:
      exp = expression();
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
          print.expression = exp;
          {if (true) return print;}
    throw new Error("Missing return statement in function");
  }

  static final public Stmt assignment() throws ParseException {
        ExpNode asnmnt = new ExpNode();
        ExpNode lvalue, rvalue;
        Stmt statement = new Stmt();
        statement.type="assignment";
        statement.expression = asnmnt;
    lvalue = varref();
    jj_consume_token(23);
    rvalue = expression();
          //System.out.println("In Assignment");
          asnmnt.operation = '=';
          asnmnt.left = lvalue;
          asnmnt.right= rvalue;
//		asnmnt.traverse();
//		System.out.println();
          {if (true) return statement;}
    throw new Error("Missing return statement in function");
  }

  static final public ExpNode expression() throws ParseException {
        ExpNode root,lchild,rchild;
        Token operator;
    root = term();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        operator = jj_consume_token(PLUS);
        break;
      case MINUS:
        operator = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      rchild = term();
      lchild = root;
        root = new ExpNode();
        root.left = lchild;
        root.right= rchild;
        root.operation = operator.image.charAt(0);
    }
    {if (true) return root;}
    throw new Error("Missing return statement in function");
  }

  static final public ExpNode term() throws ParseException {
        ExpNode root,lchild,rchild;
        Token operator;
    root = element();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
        operator = jj_consume_token(MULTIPLY);
        break;
      case DIVIDE:
        operator = jj_consume_token(DIVIDE);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      rchild = element();
      lchild = root;
        root = new ExpNode();
        root.left = lchild;
        root.right= rchild;
        root.operation = operator.image.charAt(0);
    }
    {if (true) return root;}
    throw new Error("Missing return statement in function");
  }

  static final public void unary() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
      element();
      break;
    case CONSTANT:
    case IDENT:
    case 21:
      element();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public ExpNode element() throws ParseException {
  ExpNode factor;
        Token constant;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CONSTANT:
      constant = jj_consume_token(CONSTANT);
            factor = new ExpNode();
          factor.operation='c';
          factor.operand = constant.image;
      break;
    case IDENT:
      factor = varref();
      break;
    case 21:
      jj_consume_token(21);
      factor = expression();
      jj_consume_token(22);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  {if (true) return factor;}
    throw new Error("Missing return statement in function");
  }

  static final public ExpNode varref() throws ParseException {
  ExpNode ref = new ExpNode();
  Token ident;
    ident = jj_consume_token(IDENT);
                ref.operation = 'r';
                ref.operand = ident.image;
                ref.left = null;
                ref.right= null;
                {if (true) return ref;}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public BasicTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[10];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x2da00,0xc000,0x2da00,0x230000,0x60,0x60,0x180,0x180,0x230040,0x230000,};
   }

  /** Constructor with InputStream. */
  public Basic(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Basic(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new BasicTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Basic(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new BasicTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Basic(BasicTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(BasicTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 10; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[24];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 10; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 24; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
